# gstreamer-audio-ivr

./: CMakeLists.txt  README.md  main1.cpp  main2.cpp
